--- a/Django Project/techproject/src/mainapp/Templates/base.html
+++ b/Django Project/techproject/src/mainapp/Templates/base.html
@@ -9,11 +9,7 @@
     </head>
     <body>
         <div class="page_container">
-            <ul class="topnav">
-                <li><a href="#">Royal Hotels</a> </li>
-                <li><a href="#">See Our Menu</a> </li>
-                <li><a href="#">Admin Panel</a> </li>
-            </ul>
+            {% include "navbar.html" %}
             <header class="header-title">
                 <h1>{% block header %}{% endblock %}</h1>
 
@@ -21,10 +17,7 @@
             {% block content %}{% endblock %}
         </div>
 
-        <section id="block-footer">
-            <p id="footer-right"><a href="#">Terms</a>|<a href="#">Privacy</a> </p>
-            <p id="footer-left">&copy;2018 - The Fictional, Royal Hotels</p>
-        </section>
+        {% include "footer.html" %}
 
     </body>
 </html>
