--- a/Django Project/techproject/src/mainapp/Templates/home.html
+++ b/Django Project/techproject/src/mainapp/Templates/home.html
@@ -1,27 +1,21 @@
 {% extends "base.html" %}
 
 {% block title %}Royal Hotels{% endblock %}
+
 {% block header %}Welcome to the Royal Hotels{% endblock %}
 
 {% block content %}
-<h1>Welcome {{ user | title}} to the Greatest Site on Earth</h1>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+{% for product in products %}
+    <ul>
+        {% if product == "Apples" %}
+        <li>#{{ product }}</li>
+        {% else %}
+        <li>{{ product }}</li>
+        {% endif %}
+    </ul>
+{% endfor %}
 
 
 {% endblock %}
