--- a/Django Project/techproject/src/mainapp/Templates/base.html
+++ b/Django Project/techproject/src/mainapp/Templates/base.html
@@ -1,3 +1,4 @@
+{% load static from staticfiles %}
 <!DOCTYPE html>
 <html lang="en" class="bg_img">
     <head>
@@ -6,6 +7,8 @@
         <meta name="viewport" content="width=device=width, initial-scale=1">
         <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link  rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}">
+
     </head>
     <body>
         <div class="page_container">
