--- a/Django Project/techproject/src/mainapp/Templates/navbar.html
+++ b/Django Project/techproject/src/mainapp/Templates/navbar.html
@@ -1,6 +1,6 @@
 
 <ul class="topnav">
-    <li><a href="#">Royal Hotels</a> </li>
+    <li><a href="{% url 'home' %}">Royal Hotels</a> </li>
     <li><a href="#">See Our Menu</a> </li>
-    <li><a href="#">Admin Panel</a> </li>
+    <li><a href="{% url 'admin_console' %}">Admin Panel</a> </li>
 </ul>
